--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1,6 +1,32 @@
 
-[TOC]
-## 动态规划
+
+- [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
+- [70. 爬楼梯问题](#70-爬楼梯问题)
+- [121. 买卖股票的最佳时机 *](#121-买卖股票的最佳时机-)
+- [122. 买卖股票的最佳时间 2 *](#122-买卖股票的最佳时间-2-)
+- [123. 买卖股票的最佳时间 3 [Hard] *](#123-买卖股票的最佳时间-3-hard-)
+- [188. 买卖股票的最佳时机 IV [Hard]*](#188-买卖股票的最佳时机-iv-hard)
+- [309. 最佳买卖股票时间含冷冻期 [*medium*]](#309-最佳买卖股票时间含冷冻期-medium)
+- [714. 最佳买卖股票时间含手续费 [*medium*]](#714-最佳买卖股票时间含手续费-medium)
+- [53. 最大子序和 *](#53-最大子序和-)
+- [198. 打家劫舍](#198-打家劫舍)
+- [213. 打家劫舍 II](#213-打家劫舍-ii)
+- [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
+- [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
+- [62. 不同路径 [Medium]](#62-不同路径-medium)
+- [63. 不同路径 2](#63-不同路径-2)
+- [980. 不同路径 3 [Hard]](#980-不同路径-3-hard)
+- [322. 零钱兑换 [Medium]](#322-零钱兑换-medium)
+- [300. 最长上升子序列](#300-最长上升子序列)
+- [221. 最大正方形](#221-最大正方形)
+- [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
+- [91. 解码方法 [Medium]](#91-解码方法-medium)
+- [剑指46. 把数字翻译成字符串](#剑指46-把数字翻译成字符串)
+- [补充： 最小编辑代价 [ByteDance]](#补充-最小编辑代价-bytedance)
+- [64. 最小路径和](#64-最小路径和)
+- [120. 三角形最小路径和 [Red 小红书]](#120-三角形最小路径和-red-小红书)
+- [1143. 最长公共子序列 *](#1143-最长公共子序列-)
+
 
 ### 剑指10-1.斐波那契数列
 
@@ -27,22 +53,9 @@ public:
 ```
 ### 70. 爬楼梯问题
 - 递归公式：f(n)=f(n-1)+f(n-2) 递归解法会超时
+  - 初始状态： `f(0) = 1` `f(1) = 1` 
 - 使用简单的动态规划解决
 - 或者利用上面的递归公式的通项公式来直接求解
-
-```
-class Solution {
-public:
-    int climbStairs(int n) {
-        if(n<=1){
-            return 1;
-        }
-       
-        return climbStairs(n-1)+climbStairs(n-2);
-
-    }
-};
-```
 
 
 ```
@@ -64,18 +77,15 @@ public:
 ```
 class Solution {
 public:
-    int climbStairs(int n) {
-        int p=0;
-        int q=0;
-        int r=1;
-        for(int i=0;i<n;i++){
-            p=q;
-            q=r;
-            r=q+p;
-
+    int numWays(int n) {
+        int a = 1;
+        int b = 1;
+        for (int i = 1; i < n; i++) {
+            int tmp = b;
+            b = (a + b)%(1000000007);
+            a = tmp;
         }
-        return r;
-
+        return b%(1000000007);
     }
 };
 ```
