--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -12,6 +12,7 @@
   - [141. 环形链表操作](#141-环形链表操作)
   - [142. 环形链表2 [Medium]](#142-环形链表2-medium)
   - [160. 相交链表](#160-相交链表)
+  - [876. 链表的中间节点](#876-链表的中间节点)
   - [234. 回文链表判断](#234-回文链表判断)
   - [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
 - [链表删除节点](#链表删除节点)
@@ -298,6 +299,29 @@ public:
     }
 };
 ```
+### 876. 链表的中间节点
+> 给定一个头结点为 head 的非空单链表，返回链表的中间结点。
+如果有两个中间结点，则返回第二个中间结点。
+
+- **`快慢指针法`**，一点就到家 boom
+- 后面常用哦！！！
+
+```
+class Solution {
+public:
+    ListNode* middleNode(ListNode* head) {
+        if (!head) return nullptr;
+        ListNode* slow = head;
+        ListNode* fast = head;
+        while (fast && fast -> next) {
+            slow = slow -> next;
+            fast = fast -> next -> next;
+        }
+        return slow;
+    }
+};
+```
+
 ### 234. 回文链表判断
 > 给定一个单向链表判断是否为回文链表
 
