--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -1,4 +1,5 @@
 - [遍历问题](#遍历问题)
+  - [9. 回文数](#9-回文数)
   - [54. 螺旋数组](#54-螺旋数组)
   - [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
   - [66.加一](#66加一)
@@ -9,6 +10,7 @@
 - [位运算技巧](#位运算技巧)
   - [136. 只出现一次的数字](#136-只出现一次的数字)
   - [137. 只出现过一次的数字](#137-只出现过一次的数字)
+  - [191. 位1的个数](#191-位1的个数)
   - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
 - [双指针技巧](#双指针技巧)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
@@ -28,6 +30,30 @@
 
 ## 遍历问题
 - 常考察对二维数组的不同形式的遍历
+
+### 9. 回文数
+> 给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false。
+
+- 排除特殊情况： **当为负数或者个位数为0时**，即不可能是回文数
+- 采用整数反转： 反转一半整数，然后对比得到的结果是否相等(偶数位) 或者 `x = tmp/10` （奇数位）
+
+```
+class Solution {
+public:
+    bool isPalindrome(int x) {
+        // 当为负数  或者个位数为0时，即不可能是回文数
+        if (x < 0 || (x % 10 == 0 && x != 0))
+            return false;
+        int tmp = 0;
+        while ( x > tmp) {
+            tmp = tmp * 10 + x % 10;
+            x /= 10;
+        }
+        return tmp == x || x == tmp / 10;
+    }
+};
+```
+
 ### 54. 螺旋数组
 - 螺旋遍历二维数组
   - 循环终止条件：**还有剩余的元素未遍历**
@@ -385,6 +411,26 @@ public:
             seen_twice = ~seen_once&(seen_twice ^ p);
         }
         return seen_once;
+    }
+};
+```
+
+### 191. 位1的个数
+>  输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）
+
+
+```
+class Solution {
+public:
+    int hammingWeight(uint32_t n) {
+       int ans = 0;
+       int l = 0;
+       while (l < 32) {
+           if(n & (1 << l))
+                ans++;
+           l++;
+       } 
+       return ans;
     }
 };
 ```
