--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -10,6 +10,7 @@
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
   - [128. 最长连续序列 [字节*]](#128-最长连续序列-字节)
   - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
+  - [补充题： 计算数组的小和](#补充题-计算数组的小和)
 
 
 ## 进阶
@@ -482,5 +483,78 @@ int maxPoints(vector<int>& nums, int len) {
     }
     cout << ans << endl;
     return ans;
+}
+```
+
+### 补充题： 计算数组的小和
+> 在一个数组中，**每一个数左边比当前数小的数累加起来**，叫做这个数组的小和。求一个数组的小和。
+
+```
+例子：[1,3,4,2,5]
+
+1左边比1小的数，没有；
+
+3左边比3小的数，1；
+
+4左边比4小的数，1、3；
+
+2左边比2小的数，1；
+
+5左边比5小的数，1、3、4、2；
+
+所以小和为1+1+3+1+1+3+4+2=16
+*要求时间复杂度O(NlogN)，空间复杂度O(N)*
+```
+https://mp.weixin.qq.com/s/0ih4W6nawzFUPSj3GOnYTQ
+
+- 暴力法： 内外两层循环，时间复杂度O(N^2)
+- 进一步优化：**借鉴归并排序的思想**
+  - smallSum([1,3,4,2,5])实际就等于smallSum([1,3,4])+smallSum([2,5])+c
+  - c即**左半段数组中可能存在比右半段数组小的元素**对应的小和
+  - 对区间进行二分后， 同位置上的小和等于`c = (r - j + 1) * L(i)` **即有多少个元素大于前半区的值**
+![avatar](./补充.png)
+- 套用归并排序的代码框架：
+    - 在合并两个子区间的时候，**可以记录对比的小和结果，同时调整顺序**，得到合并后有序的区间，从而在后续的小和计算中，可以保证右区间有序： 计算公式合理
+- 时间复杂度 O(NlogN)
+```
+int merge(vector<int>& nums, int left, int mid, int right) {
+    int l = left; 
+    int r = mid + 1;
+    int res = 0;
+    vector<int> tmp;
+    while (l <= left && r <= right) {
+        if (nums[l] < nums[r]) {
+            res += (right - r + 1) * nums[l];
+            tmp.push_back(nums[l]);
+            l++;
+        }
+        else {
+            tmp.push_back(nums[r]);
+            r++
+        }
+    }
+    while (l <= left) {
+        tmp.push_back(nums[l]);
+        l++;
+    }
+    while (r <= right) {
+        tmp.push_back(nums[r]);
+        r++;
+    }
+    for (int i = 0; i < tmp.size(); i++) {
+        nums[i+l] = tmp[i];
+    }
+    return res;
+}
+
+int mergeSum(vector<int>& nums, int left, int right) {
+    if (left >= right) {
+        return 0;
+    }
+    int mid = left + (right - left) / 2;
+    int L = mergeSum(nums, left , mid);
+    int R = mergeSum(nums, mid + 1, right);
+    int C = merge(nums, left, mid ,right);
+    return L + R + C;
 }
 ```
