--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -1,5 +1,31 @@
 
-[TOC]
+- [基础题目](#基础题目)
+  - [二分查找基本模版：](#二分查找基本模版)
+  - [变形题目： X的平方根](#变形题目-x的平方根)
+  - [374. 猜数字大小](#374-猜数字大小)
+  - [33. 搜索旋转排序数组 [KEY] [Medium]](#33-搜索旋转排序数组-key-medium)
+  - [81. 搜索旋转有序数组 [有重复] [Medium]](#81-搜索旋转有序数组-有重复-medium)
+  - [34. 在排序数组中查找元素的第一个和最后一个位置  [Medium Red*]](#34-在排序数组中查找元素的第一个和最后一个位置--medium-red)
+  - [658. Find K Closest Elements [Medium]](#658-find-k-closest-elements-medium)
+  - [162. 寻找峰值](#162-寻找峰值)
+- [衍生题目](#衍生题目)
+  - [50. Pow(x,n)](#50-powxn)
+  - [367. 有效的完全平方数](#367-有效的完全平方数)
+  - [744. 寻找比目标字母大的最小字母](#744-寻找比目标字母大的最小字母)
+  - [153. 寻找旋转排列数组中的最小值 *](#153-寻找旋转排列数组中的最小值-)
+  - [154. 寻找旋转排列数组中的最小值 II **](#154-寻找旋转排列数组中的最小值-ii-)
+  - [两个数组的交集](#两个数组的交集)
+  - [TwoSum 2 (输入有序数组)](#twosum-2-输入有序数组)
+  - [寻找重复数](#寻找重复数)
+  - [快慢指针法](#快慢指针法)
+  - [4. 寻找两个正序数组的中位数](#4-寻找两个正序数组的中位数)
+  - [719. 寻找第k小的距离对 [KEY]](#719-寻找第k小的距离对-key)
+  - [410. 分割数组的最大值 [KEY]](#410-分割数组的最大值-key)
+  - [29. 两数相除 [Medium]](#29-两数相除-medium)
+  - [byteDance 补充题目： 木头切割问题](#bytedance-补充题目-木头切割问题)
+- [总结体会](#总结体会)
+
+## 基础题目
 ### 二分查找基本模版：
 - input: (array,target)
 - return: index/-1
@@ -219,7 +245,7 @@ public:
 
 
 
-### 34. 在排序数组中查找元素的第一个和最后一个位置  [Medium] **【Red面试题】**
+### 34. 在排序数组中查找元素的第一个和最后一个位置  [Medium Red*]
 - 二分查找寻找边界
 - 分别**通过二分查找**寻找左右边界，重新定义一个函数来辅助实现；避免进入线性搜索的情况
 - 时间复杂度 O(logN) 空间复杂度 O(1)
@@ -606,14 +632,69 @@ public:
 };
 ```
 
-### 153. 寻找旋转排列数组中的最小值
+### 153. 寻找旋转排列数组中的最小值 *
 - 有序数组后经过旋转的最小值，为序列中的变化点
 - 可以通过改造二分查找进行去确定
-- 在套用模板时发现：利用`left<=right`这套模版实现起来需要考虑诸多细节，bug频出
+- 在套用模板时发现：利用`left<=right`这套模版**实现起来需要考虑诸多细节，bug频出**
 - 因此使用`left<right`模板来实现:
     - leetcode上的有用总结：
 > **while(l<=r) 适用于中间会产生结果**，比如求平方根，中间每一步都是结果，最后l>r之前的一步结果为最后结果
 > **while(l<r)适用于夹逼出唯一一个结果**，如果求峰值，峰值一定存在，那么只要夹逼出l=r的情况就是结果。
+
+https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/solution/er-fen-cha-zhao-wei-shi-yao-zuo-you-bu-dui-cheng-z/
+
+```
+左、中、右三个位置的值相比较，有以下几种情况：
+
+1. **左值 < 中值, 中值 < 右值** ：没有旋转，最小值在最左边，可以收缩右边界
+
+        右
+     中
+ 左
+2. **左值 > 中值, 中值 < 右值** ：有旋转，最小值在左半边，可以收缩右边界
+
+ 左       
+         右
+     中
+3. 左值 < 中值, 中值 > 右值 ：有旋转，最小值在右半边，**可以收缩左边界**
+
+     中  
+ 左 
+         右
+4. 左值 > 中值, 中值 > 右值 ：单调递减，**不可能出现**
+
+ 左
+    中
+        右
+```
+
+- 上述情况可以总结为两类：
+  - 收缩右边界： `nums[mid] < nums[right]`
+  - 收缩左边界：`nums[mid] > nums[right]`
+
+```
+class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size() - 1;
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            // 收缩右边界
+            if (nums[mid] < nums[right]) {
+                right = mid;
+            }
+            // 收缩左边界
+            else {
+                left = mid + 1;
+            }
+        }
+        return nums[left];
+    }
+};
+```
+
+- *旧版代码： 可以忽略*
 
 ```class Solution {
 public:
@@ -642,10 +723,37 @@ public:
     }
 };
 ```
-### 寻找旋转排列数组中的最小值2
+### 154. 寻找旋转排列数组中的最小值 II **
 - 有重复值的情况 hard
 - 需要在上一个解法的基础考虑重复值的影响
 
+- 参照上题中对不同情况的分析，在有重复值的影响下，多了相等情况的处理：
+  - 收缩右边界： `nums[mid] < nums[right]`
+  - 收缩左边界：`nums[mid] > nums[right]`
+  - 逐一移动右边界： `nums[mid] == nums[right]`
+```
+class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size() - 1;
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] < nums[right]) {
+                right = mid;
+            }
+            else if (nums[mid] > nums[right]) {
+                left = mid + 1;
+            }
+            else {
+                right--;
+            }
+        }
+        return nums[left];
+    }
+};
+```
+- *旧版代码*
 ```class Solution {
 public:
     int findMin(vector<int>& nums) {
