--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -528,6 +528,7 @@ public:
 - 基本思路： 直接线性循环，暴力解法可能超时
 - 基于迭代思路： `x->x^2->x^4->...`
 - 时间复杂度： O(logN) 空间复杂度：（递归栈占用）O(logN)
+- 关键点： **`n的符号`**
 ```
 class Solution {
 public:
