--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -146,10 +146,44 @@ public:
 ```
 
 ###  125. 回文串验证
+> 给定一个字符串，验证它是否是回文串，只考虑字母和数字字符，可以忽略字母的大小写。
 
-- 要剔除非字母/数字的字符
+
+- **要剔除非字母/数字的字符**
 - 可以利用双指针法进行剔除和回文的同时验证；(注意大小字母转换)  时间复杂度O(|s|) 空间复杂度O(1)
 - 或者将剔除的字符放在新的字符串中，利用字符串反转等操作进行回文判断 O(|s|) 空间复杂度O(|s|)
+- 关键点： **`双指针`**   **`字符串api`** 
+    - `isalnum`: 判断是否为字母/数字 
+    - `isalpha`: 判断是否为字母
+    - `isdigit`: 判断是否为数字 
+    - `tolower` `toupper`
+
+```c++
+class Solution {
+public:
+    bool isPalindrome(string s) {
+        if (s.empty()) return false;
+        int left = 0;
+        int right = s.size() - 1;
+        while (left < right) {
+            while (left < right && !isalnum(s[left])) {
+                left++;
+            }
+            while (left < right && !isalnum(s[right])) {
+                right--;
+            }
+            if (left < right) { 
+                if (tolower(s[left++]) != tolower(s[right--])) {
+                    return false;
+                }
+            }
+        }
+        return true;  
+    }
+};
+```
+
+- *旧版代码*
 
 ```
 class Solution {
