--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -2,6 +2,7 @@
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
   - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
+  - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
   - [718. 最长重复子数组](#718-最长重复子数组)
@@ -119,6 +120,33 @@ public:
     }
 };
 ```
+### 剑指62. 圆圈最后剩下的数字
+> **约瑟夫环问题**： 0,1,···,n-1这n个数字排成一个圆圈，从数字0开始，每次从这个圆圈里删除第m个数字（删除后从下一个数字开始计数）。求出这个圆圈里剩下的最后一个数字。
+
+- 模拟操作： 循环链表逐一删除即可
+- 数学分析 + 递归/迭代
+  - `f(n,m) = y` 有n个数，下标从0到n-1，然后从index=0开始数，**每次数m个数, 结果为y**
+  - 寻找 `f(n,m) = y` 与  `f(n - 1,m) = x` 的关系
+  - 二者关系在于： n个数划掉一个数后得到的状态就是`f(n - 1,m)` 
+  - 而n个数划掉的第一个数就是 `(m-1)%n` 由于是从0编码，所以要是m-1
+  - 在划掉数的基础上接着划掉第二个数
+  - 最后的结果就是`(m-1)%n`后 第f(n - 1,m) + 1个数就是结果 
+    - `f(n,m)=[(m-1)%n+x+1]%n`
+    - 化简后： `f(n,m) = [m + x] % n`  `x = f(n-1, m)` 构成递推公式
+
+```
+class Solution {
+public:
+    int lastRemaining(int n, int m) {
+        int f = 0;
+        for (int i = 2; i < n + 1; i++) {
+            f = (m + f) % i;
+        }
+        return f;
+    }
+};
+```
+
 
 ### 73. 矩阵置零  [Medium] 
 - 遍历
