--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -13,6 +13,7 @@
   - [191. 位1的个数](#191-位1的个数)
   - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
 - [双指针技巧](#双指针技巧)
+  - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
   - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
   - [283. 移动零](#283-移动零)
@@ -53,6 +54,7 @@ public:
     }
 };
 ```
+
 
 ### 54. 螺旋数组
 - 螺旋遍历二维数组
@@ -480,6 +482,33 @@ public:
 ```
 
 ## 双指针技巧
+
+### 26. 删除有序数组中的重复项
+> 给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度
+
+- 使用双指针思想，left指针用于记录元素值，当出现重复值时跳过即可，left指针不移动
+- **`双指针`**
+```c++
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+        if (nums.empty())
+            return 0;
+        int left = 1;
+        for (int i = 1; i < nums.size(); i++) {
+            if (nums[i-1] == nums[i]) {
+                continue;
+            }
+            else {
+                nums[left] = nums[i];
+                left++;
+            }
+        }
+        return left;
+    }
+};
+```
+
 ### 75. 颜色分类 [Medium]
 - 三种颜色 0 1 2 ， 要实现对这些颜色的原地排序 从小到大排列
 
@@ -493,7 +522,7 @@ public:
 
 - 关键点： **双指针** **一次遍历**
 
-```
+```c++
 class Solution {
 public:
     void sortColors(vector<int>& nums) {
