更新字符串

--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -3,35 +3,242 @@
 
 <!-- code_chunk_output -->
 
-  - [344.反转字符串](#344反转字符串)
+- [字符串的遍历](#字符串的遍历)
+  - [6. Z字形变换](#6-z字形变换)
   - [7. 整数反转](#7-整数反转)
+  - [14. 最长公共前缀](#14-最长公共前缀)
+  - [38.外观数列](#38外观数列)
+  - [344.反转字符串](#344反转字符串)
+  - [151. 翻转字符串的单词](#151-翻转字符串的单词)
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
   - [字符的有效异位符](#字符的有效异位符)
+- [回文串](#回文串)
+  - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
+- [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
-  - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找)
-  - [38.外观数列](#38外观数列)
-  - [14. 最长公共前缀](#14-最长公共前缀)
+  - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
-  - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
-  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard)
+  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
   - [补充. 01串问题](#补充-01串问题)
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
-  - [8. 字符串转整数(atoi)](#8-字符串转整数atoi)
-  - [7. 整数反转](#7-整数反转-1)
-  - [151. 翻转字符串的单词](#151-翻转字符串的单词)
-- [14. 最长公共前缀](#14-最长公共前缀-1)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
 
 <!-- /code_chunk_output -->
+字符串问题花样繁多，面试题目难易差距显著，唯有多做多看掌握各种细节处理才能驾驭该类题目
+
+## 字符串的遍历
+本质与数组的遍历问题相似， 题目比较灵活， 难度正常  
+常可以**运用双指针、滑窗等通用技巧**
+
+### 6. Z字形变换
+> 将一个给定字符串 s 根据给定的行数 numRows ，以从上往下、从左到右进行 Z 字形排列
+```
+输入字符串为 "PAYPALISHIRING" 行数为 3 时，排列如下：
+P   A   H   N
+A P L S I I G
+Y   I   R
+```
+- 字符串遍历问题，需要考虑如何实现**z形游走**， 先增再减
+  - 设置方向变量，当到达0/numRows-1时调整方向， 即改变-1/+1，
+  - **由于从0开始向下，需要将方向预设为-1**
+- 此外还需要考虑边界问题，如：只有一行的情况
+  - 直接返回即可
+- 时间复杂度： O(N) 
+- 关键点： **`Z形遍历`**  这类思想可以应用在数组的特殊方向遍历中
+
+```
+class Solution {
+public:
+    string convert(string s, int numRows) {
+        if (numRows == 1) return s;
+        vector<string> res(numRows);
+        int dir = -1;
+        int index = 0;
+        for (int i = 0; i< s.size(); i++) {
+            //cout << index << " ";
+            res[index].push_back(s[i]);
+            if (index == 0 || index == numRows - 1) {
+                dir = -dir;
+            }
+            index = index + dir;
+        }
+        string ans = "";
+        for (auto p : res) {
+            ans +=p;
+        }
+        return ans;
+    }
+};
+```
+
+### 7. 整数反转
+> 给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
+如果反转后整数超过 32 位的有符号整数的范围 [−231,231 − 1] ，就返回 0。
+
+- 考虑反转后是否会溢出的问题：
+  - **使用ans 和INT_MIN / INT_MAX的判断，提前判断*10前是否会溢出， 正数最大值个位为7 ， 负数为8**
+- 主要考虑反转过程的溢出情况：当数是正数，逐步计算反转值使用 res*10+pop; 当上一步得到的res以及接近最大临界时需要提取return: **res>INT_MAX/10** （res==INT_MAX/10&&res>7） **7为最大正整数的个位数， 8是INT_MIN的个位**
+  - *非常常见的点*
+- 时间复杂度O(log10(x)) 要处理log10(x)个数字
+- 关键点： **`字符串常规遍历`**  **`数值边界情况处理`**
+
+```class Solution {
+public:
+    int reverse(int x) {
+       int res=0;
+        while(x){
+            int pop=x%10;
+            if(res>INT_MAX/10||(res==INT_MAX/10 && pop>7 )) return 0;
+            if(res<INT_MIN/10||(res==INT_MIN/10 && pop<-8 )) return 0;
+            x=int(x/10);
+            res=res*10+pop;
+        }
+        return res;
+    }
+};
+```
+
+### 14. 最长公共前缀
+> 编写一个函数来查找字符串数组中的最长公共前缀。如果不存在公共前缀，返回空字符串 ""
+
+- 遍历数组中的所有最短字符串，取最短字符串的长度；
+- 从0开始循环遍历各串同一位置上是否相等
+- 时间复杂度 O(NM)
+- 关键点： **`循环遍历`**
+```
+class Solution {
+public:
+    string longestCommonPrefix(vector<string>& strs) {
+        if (strs.empty())
+            return "";
+        int min_l = INT_MAX;
+        for (auto s : strs) {
+            int a =  s.size();
+            min_l = min(min_l, a);
+        }
+        int end = 0;
+        bool flag = true;
+        for (int i = 0; i < min_l; i++) {
+            for (int j = 1; j < strs.size(); j++) {
+                if (strs[j][i] != strs[j-1][i]) {
+                    flag = false;
+                    break;
+                }
+            }
+            if (flag)
+                end++;
+            else {
+                break;
+            }
+        }
+        return strs[0].substr(0, end);
+    }
+};
+```
+- 进阶优化： **二分查找**：长公共前缀的长度不会超过字符串数组中的最短字符串的长度。
+  - 用 $\textit{minLength}minLength$ 表示字符串数组中的最短字符串的长度，则可以在 $[0,\textit{minLength}][0,minLength]$ 的范围内通过二分查找得到最长公共前缀的长度
+  - 每次取查找范围的中间值 $\textit{mid}mid$，判断每个字符串的长度为$ \textit{mid}$ 的前缀是否相同，
+    - 如果相同则最长公共前缀的长度一定大于或等于 $\textit{mid}$，
+    - 如果不相同则最长公共前缀的长度一定小于 $\textit{mid}$，
+  - 通过上述方式将查找范围缩小一半，直到得到最长公共前缀的长度。  
+- 时间复杂度为O(mnlogm) m为最小字符串长度。
+
+
+```
+class Solution {
+public:
+    string longestCommonPrefix(vector<string>& strs) {
+        //int s_id=0;
+        int c_id=0;
+        char tmp;
+        string res="";
+        int s_len=strs.size();
+        bool flag=false;
+        if(s_len==0) return res;
+        while(true){
+            for(int i=0;i<s_len;i++){
+                if(c_id==strs[i].length()){
+                    flag=true;
+                    break;
+                }else{
+                    if(i==0){
+                        tmp=strs[i][c_id];
+                    }else{
+                        if(strs[i][c_id]!=tmp){
+                            flag=true;
+                            break;
+                        }
+                    }
+                }
+
+            }
+            if(flag) return res;
+            res.append(1,tmp);
+            c_id++;
+        }
+        return res;
+
+
+    }
+};
+```
+### 38.外观数列
+- 数组遍历，分段计算
+- 可以使用双指针完成，头尾指针共同确定一段数字相同的片段
+
+```class Solution {
+public:
+    string countAndSay(int n) {
+        if(n==1) return "1";
+        
+        string s=countAndSay(n-1);
+        int counts=1;
+        string res;
+        char tmp;
+        
+        for(int i=0;i<s.length();i++){
+            if(i==0){
+                counts=1;
+                tmp=s[i];
+                if(i==s.length()-1){
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i]; 
+                }
+                continue;
+            }
+            if(s[i]==s[i-1]){
+                counts++;
+            }else{
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i];
+            }
+            if(i==s.length()-1){
+                res.append(to_string(counts));
+                counts=1;
+                res.append(1,tmp);
+                tmp=s[i]; 
+            }
+            //cout<<res<<endl;
+        }
+
+        return res;
+
+    }
+};
+```
 
 ### 344.反转字符串
 
-- 双指针法：头尾指针进行掉换，时间复杂度为O(N)
+- **`双指针法`**：头尾指针进行掉换，时间复杂度为O(N)
 
 ```
 class Solution {
@@ -51,29 +258,48 @@ public:
 };
 ```
 
+### 151. 翻转字符串的单词
+> 给定一个字符串，逐个翻转字符串中的每个单词
+> 无空格字符构成一个单词。输入字符串可以在前面或者后面包含多余的空格，但是反转后的字符不能包括。
 
-### 7. 整数反转
 
-- 将有符号的整数(int32)进行反转
-- 主要考虑反转过程的溢出情况：当数是正数，逐步计算反转值使用 res*10+pop; 当上一步得到的res以及接近最大临界时需要提取return: res>INT_MAX/10 （res==INT_MAX/10&&res>7） 7为最大正整数的个位数
-- 时间复杂度O(log10(x)) 要处理log10(x)个数字
+- 关键点：去除空格以及字符串翻转
+- 1. 首先进行翻转，得到整体翻转后的字符串
+- 2. **对于翻转后的字符串，要去除多余的空格，保持每个单词间仅有一个空格**，且在单词内部进行翻转
+  - 将空格都移动到字符串尾部，首先进行单词内部移动，调整空格； idx 
+  - 然后进行内部翻转 reverse
+- 时间复杂度 O(N) 空间复杂度 O(1)
 
-```class Solution {
+```
+class Solution {
 public:
-    int reverse(int x) {
-       int res=0;
-        while(x){
-            int pop=x%10;
-            if(res>INT_MAX/10||(res==INT_MAX/10 && pop>7 )) return 0;
-            if(res<INT_MIN/10||(res==INT_MIN/10 && pop<-8 )) return 0;
-            x=int(x/10);
-            res=res*10+pop;
+    string reverseWords(string s) {
+        reverse(s.begin(), s.end());
+        // 删除空格
+        // 单词级别反转
+        int n = s.size();
+        int idx = 0; // 按照格式去除空格的指针
+        int start = 0; // 字符串指针
+        while (start < n) {
+            if (s[start] != ' ') {
+                if (idx != 0) // 首个单词头不需要空格 
+                    s[idx++] = ' '; 
+                int end = start;
+                while (end < n && s[end] != ' ') s[idx++] = s[end++];
+                reverse(s.begin() + idx - (end - start) , s.begin() + idx);
+                start = end;
+            }
+            else {
+                start++;
+            }
         }
-        return res;
+        // 去除空格
+        s.erase(s.begin() + idx, s.end());
+        return s;
+
     }
 };
 ```
-
 
 ###  387. 字符串中的唯一字符
 
@@ -144,7 +370,87 @@ public:
     }
 };
 ```
+## 回文串
 
+回文串yyds， 真滴有啥用呢？  
+验证回文串，查找回文长度.....
+难度不大， 就是烦....   
+
+### 5. 最长回文子串 [Medium] [ByteDance]
+- 基础做法： 双指针中心展开方法进行回文子串搜索
+  - 搜索回文子串时考虑是奇数还是偶数串
+  - **特殊情况处理：** 考虑当回文子串长度为1时，需要进行返回
+  - 时间复杂度O(N^2) 空间复杂度O(N)
+- **双指针比下面的递归还要高效**
+```
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        int maxLen = 1;
+        string res;
+        for (int i = 0; i < s.size() - 1; i++) {
+            string odd = find(s, i, i);
+            string even = find(s, i, i + 1);
+            //cout << odd << endl;
+            //cout << even << endl;
+            string tmp = odd.size() > even.size() ? odd : even;
+            if (tmp.size() > res.size())
+                res = tmp;
+
+        }
+        if (res.empty()) {
+            res = s.substr(0, 1);
+        }
+        return res;
+    }
+    string find(string s, int left, int right) {
+        while(left >= 0 && right < s.size() && s[left] == s[right]) {
+            left--;
+            right++;
+        }
+        return s.substr(left + 1, right - left - 1);
+    }
+
+};
+```
+
+- **DP法解题**
+  - 状态转移方程：`P[i,j`P(i,j)=P(i+1,j−1)∧(Si==Sj)
+  - `P[i,i] = true` `P[i,i+1]=(Si==Sj)`
+  - 时间复杂度 O(N^2) 空间复杂度 O(N^2)
+  - 总体不如双指针中心扩展来的快
+```
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        int maxLen = 1;
+        int begin = 0;
+        int n = s.size();
+        vector<vector<int>> dp(n, vector<int>(n)); //初始化状态表
+        for (int j = 1; j < n; j++) {
+           // dp[j][j] = 1;
+            for (int i = 0; i < j; i++) {
+                if (s[j] == s[i]) {
+                    if (j - i < 3) {
+                        dp[i][j] = 1;
+                    } else{
+                        dp[i][j] = dp[i + 1][j - 1];
+                    }
+                }
+                else {
+                    dp[i][j] = 0;
+                }
+                if (dp[i][j] && j - i + 1 > maxLen) {
+                    maxLen = j - i + 1;
+                    begin = i;
+                }
+            }
+        }
+        return s.substr(begin, maxLen);
+    }
+   
+};
+```
 ###  125. 回文串验证
 > 给定一个字符串，验证它是否是回文串，只考虑字母和数字字符，可以忽略字母的大小写。
 
@@ -213,7 +519,61 @@ public:
 };
 ```
 
+## 字符串转换问题
+
+将字符串转换为整数/ 整数转换为字符串， 复现atoi等方式  
+经典考题： 华为技术一面： **浮点数转字符串**
+需要考虑比较多的边界问题， 多看几遍即可掌握  
+
+
 ### 8.字符串转换整数 (atoi) Mid
+
+
+- 题中有较多边界条件
+  - 为了实现简单，可以先找到首个合法字符，从首个合法字符开始判断，避免中间又出现非法字符
+  - `start == i && s[i]`
+```
+class Solution {
+public:
+    int myAtoi(string s) {
+        int sign = 1;
+        int res = 0;
+        bool digit = false;
+        int start = 0;
+        while(start < s.size() && s[start] == ' '){
+            start++;
+        }
+        
+        for (int i = start; i < s.size(); i++) {
+            if (start == i && s[i] == '-') {
+              
+                sign = -1;
+                digit = true;
+                
+            }
+            else if (start == i && s[i] == '+') {
+                
+                sign = 1;
+                digit = true;
+            }
+            else if (isdigit(s[i])) {     
+                int num = s[i] - '0';
+                if (res > INT_MAX/10 || (res == INT_MAX/10 && num > 7)) {
+                    return INT_MAX;
+                }  
+                if (res < INT_MIN/10 || (res == INT_MIN/10 && num > 8)) {
+                    return INT_MIN;
+                }
+                res = res*10 + sign*num;
+            }
+            else {
+                break;
+            }
+        }
+        return res;
+    }
+};
+```
 
 - 字符串转换需要考虑比较多的边界情况，可以考虑使用有限状态自动机来解题
 - 注：当题目中的情况比较多，即需要考虑特别多/细小的边界情况，需要联想到使用自动机来简化解题过程。
@@ -270,7 +630,6 @@ public:
     }
 };
 ```
-
 ### 8. 实现strStr() 子串匹配查找 ***
 
 - KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
@@ -366,108 +725,8 @@ public:
 };
 ```
 
-### 38.外观数列
-- 数组遍历，分段计算
-- 可以使用双指针完成，头尾指针共同确定一段数字相同的片段
-
-```class Solution {
-public:
-    string countAndSay(int n) {
-        if(n==1) return "1";
-        
-        string s=countAndSay(n-1);
-        int counts=1;
-        string res;
-        char tmp;
-        
-        for(int i=0;i<s.length();i++){
-            if(i==0){
-                counts=1;
-                tmp=s[i];
-                if(i==s.length()-1){
-                res.append(to_string(counts));
-                counts=1;
-                res.append(1,tmp);
-                tmp=s[i]; 
-                }
-                continue;
-            }
-            if(s[i]==s[i-1]){
-                counts++;
-            }else{
-                res.append(to_string(counts));
-                counts=1;
-                res.append(1,tmp);
-                tmp=s[i];
-            }
-            if(i==s.length()-1){
-                res.append(to_string(counts));
-                counts=1;
-                res.append(1,tmp);
-                tmp=s[i]; 
-            }
-            //cout<<res<<endl;
-        }
-
-        return res;
-
-    }
-};
-```
 
 
-### 14. 最长公共前缀
-
-- 计算多个字符串的最长公共前缀
-- 基本方法包括：横向扫描方法和纵向扫描方法
-    - 横向扫描：对于m个字符串，依次遍历字符串数组中的每个字符串，对于每个遍历到的字符串，更新最长公共前缀，当遍历完所有的字符串以后，即可得到字符串数组中的最长公共前缀。
-    $LCP(S_1,S_2...,S_n)=LCP(LCP(...LCP(LCP(S_1,S_2),S_3)..))$   
-    时间复杂度：O(mn) 空间复杂度：O(1)
-
-    - 纵向扫描: 最容易想到，逐一遍历各串同一位置上的字符，对比是否相同，如不同或者达到字符尾，扫描结束。  时间复杂度：O(mn) 空间复杂度：O(1)
-
-- 二分查找：长公共前缀的长度不会超过字符串数组中的最短字符串的长度。用 $\textit{minLength}minLength$ 表示字符串数组中的最短字符串的长度，则可以在 $[0,\textit{minLength}][0,minLength]$ 的范围内通过二分查找得到最长公共前缀的长度。
-每次取查找范围的中间值 $\textit{mid}mid$，判断每个字符串的长度为$ \textit{mid}mid$ 的前缀是否相同，如果相同则最长公共前缀的长度一定大于或等于 $\textit{mid}mid$，如果不相同则最长公共前缀的长度一定小于 $\textit{mid}mid$，通过上述方式将查找范围缩小一半，直到得到最长公共前缀的长度。  时间复杂度为O(mnlogm) m为最小字符串长度。
-
-
-```
-class Solution {
-public:
-    string longestCommonPrefix(vector<string>& strs) {
-        //int s_id=0;
-        int c_id=0;
-        char tmp;
-        string res="";
-        int s_len=strs.size();
-        bool flag=false;
-        if(s_len==0) return res;
-        while(true){
-            for(int i=0;i<s_len;i++){
-                if(c_id==strs[i].length()){
-                    flag=true;
-                    break;
-                }else{
-                    if(i==0){
-                        tmp=strs[i][c_id];
-                    }else{
-                        if(strs[i][c_id]!=tmp){
-                            flag=true;
-                            break;
-                        }
-                    }
-                }
-
-            }
-            if(flag) return res;
-            res.append(1,tmp);
-            c_id++;
-        }
-        return res;
-
-
-    }
-};
-```
 ### 49. 字母异位词组合
 - 考察hash表的使用
 - **两个字符串互为字母异位词，当且仅当两个字符串包含的字母相同**。同一组字母异位词中的字符串具备相同点，可以使用相同点作为一组字母异位词的标志，使用哈希表存储每一组字母异位词，哈希表的键为一组字母异位词的标志，哈希表的值为一组字母异位词列表
@@ -535,80 +794,7 @@ public:
 };
 ```
 
-### 5. 最长回文子串 [Medium] [ByteDance]
-- 基础做法： 双指针中心展开方法进行回文子串搜索
-  - 搜索回文子串时考虑是奇数还是偶数串
-  - **特殊情况处理：** 考虑当回文子串长度为1时，需要进行返回
-  - 时间复杂度O(N^2) 空间复杂度O(N)
-```
-class Solution {
-public:
-    string longestPalindrome(string s) {
-        int maxLen = 1;
-        string res;
-        for (int i = 0; i < s.size() - 1; i++) {
-            string odd = find(s, i, i);
-            string even = find(s, i, i + 1);
-            //cout << odd << endl;
-            //cout << even << endl;
-            string tmp = odd.size() > even.size() ? odd : even;
-            if (tmp.size() > res.size())
-                res = tmp;
 
-        }
-        if (res.empty()) {
-            res = s.substr(0, 1);
-        }
-        return res;
-    }
-    string find(string s, int left, int right) {
-        while(left >= 0 && right < s.size() && s[left] == s[right]) {
-            left--;
-            right++;
-        }
-        return s.substr(left + 1, right - left - 1);
-    }
-
-};
-```
-
-- **DP法解题**
-  - 状态转移方程：`P[i,j`P(i,j)=P(i+1,j−1)∧(Si==Sj)
-  - `P[i,i] = true` `P[i,i+1]=(Si==Sj)`
-  - 时间复杂度 O(N^2) 空间复杂度 O(N^2)
-  - 总体不如双指针中心扩展来的快
-```
-class Solution {
-public:
-    string longestPalindrome(string s) {
-        int maxLen = 1;
-        int begin = 0;
-        int n = s.size();
-        vector<vector<int>> dp(n, vector<int>(n)); //初始化状态表
-        for (int j = 1; j < n; j++) {
-           // dp[j][j] = 1;
-            for (int i = 0; i < j; i++) {
-                if (s[j] == s[i]) {
-                    if (j - i < 3) {
-                        dp[i][j] = 1;
-                    } else{
-                        dp[i][j] = dp[i + 1][j - 1];
-                    }
-                }
-                else {
-                    dp[i][j] = 0;
-                }
-                if (dp[i][j] && j - i + 1 > maxLen) {
-                    maxLen = j - i + 1;
-                    begin = i;
-                }
-            }
-        }
-        return s.substr(begin, maxLen);
-    }
-   
-};
-```
 
 ### 334. 递增的三元子序列 [Medium] 
 - 需要找出当前序列中的三个元素，满足递增性质
@@ -923,160 +1109,8 @@ public:
 };
 ```
 
-### 8. 字符串转整数(atoi)
-- 题中有较多边界条件
-- 为了实现简单，可以先找到首个合法字符，从首个合法字符开始判断，避免中间又出现非法字符
-  - `start == i && s[i]`
-```
-class Solution {
-public:
-    int myAtoi(string s) {
-        int sign = 1;
-        int res = 0;
-        bool digit = false;
-        int start = 0;
-        while(start < s.size() && s[start] == ' '){
-            start++;
-        }
-        
-        for (int i = start; i < s.size(); i++) {
-            if (start == i && s[i] == '-') {
-              
-                sign = -1;
-                digit = true;
-                
-            }
-            else if (start == i && s[i] == '+') {
-                
-                sign = 1;
-                digit = true;
-            }
-            else if (isdigit(s[i])) {     
-                int num = s[i] - '0';
-                if (res > INT_MAX/10 || (res == INT_MAX/10 && num > 7)) {
-                    return INT_MAX;
-                }  
-                if (res < INT_MIN/10 || (res == INT_MIN/10 && num > 8)) {
-                    return INT_MIN;
-                }
-                res = res*10 + sign*num;
-            }
-            else {
-                break;
-            }
-        }
-        return res;
-    }
-};
-```
-
-### 7. 整数反转
-> 给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
-如果反转后整数超过 32 位的有符号整数的范围 [−231,231 − 1] ，就返回 0。
-
-- 考虑反转后是否会溢出的问题：
-  - **使用ans 和INT_MIN / INT_MAX的判断，提前判断*10前是否会溢出， 正数最大值个位为7 ， 负数为8**
 
 
-```
-class Solution {
-public:
-    int reverse(int x) {
-        int ans = 0;
-        while (x) {
-            int tmp = x % 10;
-            x /= 10;
-            if ((ans > INT_MAX/10) || (ans == INT_MAX / 10 && tmp > 7)) {
-                return 0;
-            } 
-            if ((ans < INT_MIN/10) || (ans == INT_MIN / 10 && tmp < -8)) {
-                return 0;
-            } 
-            ans = ans * 10 + tmp;
-        }
-        return ans;
-    }
-};
-```
-
-### 151. 翻转字符串的单词
-> 给定一个字符串，逐个翻转字符串中的每个单词
-> 无空格字符构成一个单词。输入字符串可以在前面或者后面包含多余的空格，但是反转后的字符不能包括。
-
-
-- 关键点：去除空格以及字符串翻转
-- 1. 首先进行翻转，得到整体翻转后的字符串
-- 2. **对于翻转后的字符串，要去除多余的空格，保持每个单词间仅有一个空格**，且在单词内部进行翻转
-  - 将空格都移动到字符串尾部，首先进行单词内部移动，调整空格； idx 
-  - 然后进行内部翻转 reverse
-- 时间复杂度 O(N) 空间复杂度 O(1)
-
-```
-class Solution {
-public:
-    string reverseWords(string s) {
-        reverse(s.begin(), s.end());
-        // 删除空格
-        // 单词级别反转
-        int n = s.size();
-        int idx = 0; // 按照格式去除空格的指针
-        int start = 0; // 字符串指针
-        while (start < n) {
-            if (s[start] != ' ') {
-                if (idx != 0) // 首个单词头不需要空格 
-                    s[idx++] = ' '; 
-                int end = start;
-                while (end < n && s[end] != ' ') s[idx++] = s[end++];
-                reverse(s.begin() + idx - (end - start) , s.begin() + idx);
-                start = end;
-            }
-            else {
-                start++;
-            }
-        }
-        // 去除空格
-        s.erase(s.begin() + idx, s.end());
-        return s;
-
-    }
-};
-```
-## 14. 最长公共前缀
-> 编写一个函数来查找字符串数组中的最长公共前缀。如果不存在公共前缀，返回空字符串 ""
-
-- 遍历数组中的所有最短字符串，取最短字符串的长度；
-- 从0开始循环遍历各串同一位置上是否相等
-- 时间复杂度 O(NM)
-```
-class Solution {
-public:
-    string longestCommonPrefix(vector<string>& strs) {
-        if (strs.empty())
-            return "";
-        int min_l = INT_MAX;
-        for (auto s : strs) {
-            int a =  s.size();
-            min_l = min(min_l, a);
-        }
-        int end = 0;
-        bool flag = true;
-        for (int i = 0; i < min_l; i++) {
-            for (int j = 1; j < strs.size(); j++) {
-                if (strs[j][i] != strs[j-1][i]) {
-                    flag = false;
-                    break;
-                }
-            }
-            if (flag)
-                end++;
-            else {
-                break;
-            }
-        }
-        return strs[0].substr(0, end);
-    }
-};
-```
 
 ###  242. 有效的字母异位词 
 > 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
