--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -15,6 +15,7 @@
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
+  - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
   - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
@@ -518,6 +519,49 @@ public:
     }
 };
 ```
+
+### 516. 最长回文子序列
+
+> 给定一个字符串 s ，找到其中最长的回文子序列，并返回该序列的长度。可以假设 s 的最大长度为 1000 。
+```
+输入:
+"bbbab"
+输出:
+4  (bbbb)
+```
+- 注意：**这里是子序列，而不是子串，子串是元素连续的**。
+- 无法直接采用[LC5.最长回文子串]中简洁的双指针方法
+- 需要借助动态规划进行解题
+    - dp状态定义： `dp[i][j]` 表示从i元素到j元素之间的最长子序列
+    - 状态转移： 
+      - `dp[i][j] = dp[i+1][j-1] + 2, if s[i] == s[j]`
+      - `dp[i][j] = max(dp[i+1][j], dp[i][j-1]), otherwise` 对比左右两边的长度
+    - 特殊情况： 对于长度为1的字符串的处理， 通过对`dp[i][i]`进行初始化即可
+  - 遍历方向： **需要保证左下右方向的结果提前计算处理**，因此要在外层进行反方向遍历，在内循环正常从i + 1开始遍历，从下往上得到最终结果
+- 关键点： **`dp初始化`**  **`遍历方向`**
+```
+class Solution {
+public:
+    int longestPalindromeSubseq(string s) {
+        int n = s.size();
+        vector<vector<int>> dp (n, vector<int> (n));
+        for (int i = n - 1; i >= 0; i--) {
+            dp[i][i] = 1; //  处理长度为1的特殊情况
+            for (int j = i + 1; j < n; j++) {
+                if (s[i] == s[j]) {
+                    dp[i][j] = dp[i + 1][j - 1] + 2;
+                }
+                else {
+                    dp[i][j] = max(dp[i][j-1], dp[i+1][j]);
+                }
+            }
+        }
+        return dp[0][n-1];
+    }
+};
+```
+
+
 
 ## 字符串转换问题
 
