--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -3,6 +3,7 @@
   - [54. 螺旋数组](#54-螺旋数组)
   - [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
   - [66.加一](#66加一)
+  - [118. 杨辉三角](#118-杨辉三角)
   - [498. 对角线遍历](#498-对角线遍历)
 - [旋转问题](#旋转问题)
     - [48.旋转图像](#48旋转图像)
@@ -12,6 +13,7 @@
   - [137. 只出现过一次的数字](#137-只出现过一次的数字)
   - [191. 位1的个数](#191-位1的个数)
   - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
+  - [268. 缺失的数字](#268-缺失的数字)
 - [双指针技巧](#双指针技巧)
   - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
@@ -171,6 +173,36 @@ public:
     }
 };
 ```
+
+### 118. 杨辉三角
+> 给定一个非负整数 numRows，生成杨辉三角的前 numRows 行。
+
+
+- 时间复杂度分析：O（n(n+1)/2）
+- 关键点： **`临界处理`** **`遍历`**
+```
+class Solution {
+public:
+    vector<vector<int>> generate(int numRows) {
+        vector<vector<int>> tri(numRows);
+        if(numRows<1)
+          return tri;
+        tri[0].push_back(1);
+        for(int i=1; i<numRows;i++){
+            for(int j=0;j<i+1;j++){
+                if(j==0| j==i)
+                {
+                    tri[i].push_back(tri[i-1][0]);
+                }
+                else{
+                    tri[i].push_back(tri[i-1][j-1]+tri[i-1][j]);
+                }
+            }
+        }
+        return tri;
+    }
+};
+``` 
 
 ### 498. 对角线遍历 
 > 给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素
@@ -480,7 +512,73 @@ public:
     }
 };
 ```
+### 268. 缺失的数字
+> 给定一个包含 [0, n] 中 n 个数的数组 nums ，找出 [0, n] 这个范围内没有出现在数组中的那个数。
 
+```
+输入：nums = [3,0,1]
+输出：2
+```
+
+- 基础思路：先对数组排序，然后遍历数组，查找空缺位置；时间复杂度：排序算法复杂度(O(nlogN))
+- 为了追求线性复杂度，利用更简单的算法：利用高斯求和进行计算：
+    - 时间复杂度 O(N) 空间复杂度 O(1)
+    - **没有考虑数据溢出的情况**，求和可能会造成数据溢出
+- 关键点： **`异或位运算`**  **`遍历`**
+```class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        if(nums.empty())
+        return 0;
+        int lens = nums.size();
+        int count = (lens+1)*(lens)/2;
+        int res=0;
+        for(auto i:nums)
+            res+=i;
+        return count-res;
+
+    }
+};
+```
+
+- **优化改进**：可以通过边加边减的操作来改写代码，这种写法并不能避免极限情况下的溢出，当循环中的前两个数字为最大的两个时，可能直接就溢出了
+    - 注意写法，避免数组越界
+```
+class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        if(nums.empty())
+        return 0;
+        int res =  nums.size();
+        for(int i=0;i<nums.size();i++){
+            res+=i;
+            res-=nums[i];
+        }
+        return res;
+
+    }
+};
+```
+- **最简单的优化，利用long型来存储**
+
+- **位运算**操作，利用XOR异或运算来计算缺失值
+    - 异或运算中 相同值异或为0，数组连续异或得到没有重复的数字。
+    - `3^0^0^1^2^1^3=2` n*2+1个数字异或肯定得到一个不重复的数字，即缺失值
+    - 时间复杂度O(N) 空间复杂度O(1)
+```class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        if(nums.empty())
+        return 0;
+        int res =  nums.size();
+        for(int i=0;i<nums.size();i++){
+            res^=i;
+            res^=nums[i];
+        }
+        return res;
+    }
+};
+```
 ## 双指针技巧
 
 ### 26. 删除有序数组中的重复项
