--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -3,6 +3,7 @@
   - [二分查找基本模版：](#二分查找基本模版)
   - [变形题目： X的平方根](#变形题目-x的平方根)
   - [374. 猜数字大小](#374-猜数字大小)
+  - [278. 找到第一个错误版本](#278-找到第一个错误版本)
   - [33. 搜索旋转排序数组 [KEY] [Medium]](#33-搜索旋转排序数组-key-medium)
   - [81. 搜索旋转有序数组 [有重复] [Medium]](#81-搜索旋转有序数组-有重复-medium)
   - [34. 在排序数组中查找元素的第一个和最后一个位置  [Medium Red*]](#34-在排序数组中查找元素的第一个和最后一个位置--medium-red)
@@ -156,6 +157,57 @@ public:
             else if(guess(mid)>0) left=mid+1;
         }
         return -1;
+    }
+};
+```
+### 278. 找到第一个错误版本
+
+- 使用二分查找确定数组中的第一个错误版本
+- 有几个细节需要注意：
+    - 内存溢出问题：**在计算中间指针mid = (left+right)/2 会出现极大值溢出；需要使用left+(right-left)/2的形式来代替**
+    -  while条件和左右边界调整细节：当right=mid-1&&left=mid+1这样的移动规则后，while(条件为left<=right) 如果取不到等于号，这种情况会导致结果错误； 
+    - 相反如果right=mid left=mid+1 这样移动后，while条件应为left < right，如果取=会导致程序搜索到目标值后无法跳出循环
+
+- 基本版本：
+```// The API isBadVersion is defined for you.
+// bool isBadVersion(int version);
+
+class Solution {
+public:
+    int firstBadVersion(int n) {
+        long long left=1;
+        long long right=n;
+        while(left<=right){
+            int mid=(right+left)/2;
+            if(isBadVersion(mid)){
+                right=mid-1;
+            }else{
+                left=mid+1;
+            }
+        }
+        return left;
+    }
+};
+```
+
+- 改进版本
+```// The API isBadVersion is defined for you.
+// bool isBadVersion(int version);
+
+class Solution {
+public:
+    int firstBadVersion(int n) {
+        int left=1;
+        int right=n;
+        while(left<=right){
+            int mid=left+(right-left)/2;
+            if(isBadVersion(mid)){
+                right=mid-1;
+            }else{
+                left=mid+1;
+            }
+        }
+        return left;
     }
 };
 ```
