--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -29,6 +29,7 @@
   - [21. 合并两个有序链表](#21-合并两个有序链表)
   - [23. 合并K个升序链表 [Hard*]](#23-合并k个升序链表-hard)
 - [混合操作](#混合操作)
+  - [86. 分隔链表](#86-分隔链表)
   - [143. 重排链表](#143-重排链表)
   - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
   - [补充题： 排序奇升偶降链表 [字节 *]](#补充题-排序奇升偶降链表-字节-)
@@ -887,7 +888,44 @@ public:
 
 
 ## 混合操作
+### 86. 分隔链表
+> 给你一个链表的头节点 head 和一个特定值 x ，请你对链表进行分隔，使得所有 小于 x 的节点都出现在 大于或等于 x 的节点之前。你应当 保留 两个分区中每个节点的初始相对位置
 
+```
+输入：head = [1,4,3,2,5,2], x = 3
+输出：[1,2,2,4,3,5]
+```
+- 思路分析： 基本想法是找出给定链表中大于/等于目标值的部分，以及小于目标值的部分
+- 将两个部分使用链表存储，然后进行拼接即可
+- 为了操作简便，可以使用dummy node节点进辅助处理
+- 关键点： **`dummy node`**   **`双指针`**
+```
+class Solution {
+public:
+    ListNode* partition(ListNode* head, int x) {
+        if (!head) return nullptr;
+        ListNode* psmallH = new ListNode();
+        ListNode* plargeH = new ListNode();
+        ListNode* psmall = psmallH;
+        ListNode* plarge = plargeH;
+
+        while (head) {
+            if (head -> val < x) {
+                psmall -> next = head;
+                psmall = psmall -> next;
+            }
+            else {
+                plarge -> next = head;
+                plarge = plarge -> next;
+            }
+            head = head -> next;
+        }
+        psmall -> next = plargeH -> next;
+        plarge -> next = nullptr;
+        return psmallH -> next;
+    }
+};
+```
 ### 143. 重排链表
 > 给定一个单链表 L：L0→L1→…→Ln-1→Ln，将其重新排列后变为： L0→Ln→L1→Ln-1→L2→Ln-2→…
 
