--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -8,6 +8,7 @@
   - [7. 整数反转](#7-整数反转)
   - [14. 最长公共前缀](#14-最长公共前缀)
   - [38.外观数列](#38外观数列)
+  - [43. 字符串相乘](#43-字符串相乘)
   - [344.反转字符串](#344反转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
@@ -233,6 +234,63 @@ public:
 
         return res;
 
+    }
+};
+```
+### 43. 字符串相乘
+> 给定两个以字符串形式表示的非负整数 num1 和 num2，返回 num1 和 num2 的乘积，它们的乘积也表示为字符串形式
+
+- 乘法拆分成加法和乘法组合的形式
+- 考虑在加法/乘法中存在的进位问题，
+- 以及不同位置上乘法结果的对齐问题
+```
+class Solution {
+public:
+    string multiply(string num1, string num2) {
+        if (num1.size() < num2.size()) {
+            return multiply(num2, num1);
+        }
+        int n1 = num1.size();
+        int n2 = num2.size();
+        if ((n1 == 1 || n2 == 1) && (num1[0] == '0' || num2[0] == '0'))
+            return "0";
+        vector<string> tmp;
+        for (int i = n2 - 1; i >= 0; i--) {
+            string t;
+            for (int k = 0; k < n2 - i - 1; k++) {
+                t.push_back('0');
+            }
+            int add = 0;
+            for (int j = n1 - 1; j >= 0; j--) {
+                int mul = (num2[i] - '0') * (num1[j] - '0') + add;
+                t.push_back((char) (mul%10 + '0'));
+                add = mul / 10;
+            }
+            if (add) t.push_back((char) (add + '0'));
+            tmp.push_back(t);
+        }
+        int index = 0;
+        string res;
+        int add = 0;
+        while (true) {
+            int num = 0;
+            bool flag = false;
+            for (auto s : tmp) {
+                if (index >= s.size()) {
+                    continue;
+                } 
+                flag = true;
+                num += (s[index] - '0') ;
+            }
+            index++;
+            if (!flag) break;
+            num += add;
+            add = num / 10;
+            res.push_back((char) (num % 10 + '0'));
+        }
+        if (add) res.push_back((char) (add + '0'));
+        reverse(res.begin(), res.end());
+        return res; 
     }
 };
 ```
