--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -24,6 +24,7 @@
   - [206. 反转链表](#206-反转链表)
   - [局部反转： 反转链表前N个元素](#局部反转-反转链表前n个元素)
   - [局部反转：反转链表中第[m,n]个元素](#局部反转反转链表中第mn个元素)
+  - [24.  两两交换链表中的节点 [美团*]](#24--两两交换链表中的节点-美团)
   - [25. k个一组反转链表 [Hard*]](#25-k个一组反转链表-hard)
 - [链表合并](#链表合并)
   - [21. 合并两个有序链表](#21-合并两个有序链表)
@@ -582,6 +583,7 @@ public:
 
 ## 链表翻转操作
 
+
 ### 206. 反转链表
 > 输入一个链表的头节点，反转该链表并输出反转后链表的头节点。
 
@@ -699,6 +701,45 @@ public:
     }
 };
 ```
+### 24.  两两交换链表中的节点 [美团*]
+> 给定一个链表，两两交换其中相邻的节点，并返回交换后的链表
+```
+输入：head = [1,2,3,4]
+输出：[2,1,4,3]
+```
+
+- 与反转链表的操作本质相同，**通过双指针记录next和pred状态**
+  - 指针p 对应奇数位 ； 指针p2 对应偶数位
+  - 调整两个指针的方向，提前记录next指针，并连接pred指针
+- 考虑临界情况： head为空 / 只有一个节点 / 链表长度为奇数
+- 关键点： **`指针操作`**
+
+```c++
+class Solution {
+public:
+    ListNode* swapPairs(ListNode* head) {
+        if (!head) return head;
+        ListNode* p = head;
+        head = head -> next;
+        ListNode* p2 = head;
+        if (!head) return p;
+        ListNode* pred = nullptr;
+        while (p && p2) {
+            ListNode* n1 = p2 -> next;
+            p2 -> next = p;
+            p -> next = n1;
+            if (pred)
+                pred -> next = p2;
+            pred = p;
+            p = n1;
+            if (p)
+                p2 = p -> next;
+        }
+        return head;
+    }
+};
+```
+
 ### 25. k个一组反转链表 [Hard*]
 > 每 k 个节点一组进行翻转，请你返回翻转后的链表
 
