--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -527,13 +527,24 @@ public:
 ```
 
 ### 162. 寻找峰值
-- 序列中重要的前提：   `nums[i] != nums[i + 1]`
+> 峰值元素是指其值大于左右相邻值的元素。给你一个输入数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可. nums[-1] = nums[n] = -∞ 。**`nums[i] != nums[i + 1]`**
+
+```
+输入：nums = [1,2,3,1]
+输出：2
+解释：3 是峰值元素，你的函数应该返回其索引 2。
+```
+
+- 序列中重要的前提：  `nums[i] != nums[i + 1]`
 - **二分查找方法：**
     - 通过二分方法搜小搜索空间
     - 时间复杂度： O(logN)
     - 比较麻烦的是：
         - 临界点的设置： **left < right**；
-        - 搜索空间的方向
+        - 当设置为**left <= right**， 对于长度为1的数据会有问题
+        - **搜索空间的方向**
+          - 由于相邻元素不相等，那么就可以沿着上升方向去缩小搜索区间，一定会找到peak
+- 关键点： **`二分搜索的方向`**  **`二分查找的边界`**
 
 ```
 class Solution {
@@ -556,10 +567,9 @@ public:
 };
 ```
 
-- **线性搜索**
+- 其他思路： **线性搜索**
     - 在相邻元素不相等的前提下，可以得到当`nums[i]>nums[i+1]`就一定可以找到peak
     - 时间复杂度： O(N)
-
 ```
 class Solution {
 public:
