--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -39,7 +39,8 @@
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
   - [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
   - [先序加中序构建二叉树](#先序加中序构建二叉树)
-  - [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
+  - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
+  - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
   - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
 - [树的查找](#树的查找)
@@ -688,10 +689,13 @@ public:
 };
 ```
 
-### 填充每个节点的下一个右侧节点指针
+### 116. 填充每个节点的下一个右侧节点指针 I
+> 填充它的每个 next 指针，让这个指针指向其下一个右侧节点。如果找不到下一个右侧节点，则将 next 指针设置为 NULL。 （**给的是完全二叉树**）
+
 
 - 递归法，自顶而下的方法
 - **因为是完全二叉树**，可以**将节点的左右子节点进行连接**
+- 关键点： **`递归方向`**  **`递归终止条件`** 
 ```
 class Solution {
 public:
@@ -715,10 +719,13 @@ public:
     }
 };
 ```
-- 对于非完全二叉树：使用队列迭代的方式进行处理，直接使用队列存储会带来额外的空间开销，可以做简单遍历
+### 117. 填充每个节点的下一个右侧节点指针 II
+
+- **对于非完全二叉树**：使用队列迭代的方式进行处理，直接使用队列存储会带来额外的空间开销，可以做简单遍历
 - 基于逐层遍历的思想，在当前层对下一层进行next 连接，并记录当前层的开始节点
 - 然后进行逐层下移遍历
 - 时间复杂度 O(N) 空间复杂度 O(1)
+- **`层次遍历`** 
 
 ```
 class Solution {
